--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://aleksandra04.github.io/star_wars_api",
   "name": "star-wars",
   "version": "0.1.0",
   "private": true,
@@ -8,13 +9,34 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1",
+    "husky": "^1.3.1",
+    "@mate-academy/eslint-config-react": "*",
+    "@mate-academy/stylelint-config": "*",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^6.3.1",
+    "lint-staged": "^9.5.0",
+    "stylelint": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint-js": "eslint --ext .js,.jsx ./src/ --fix",
+    "lint": "npm run lint-js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
