--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://aleksandra04.github.io/star_wars_api",
+  "homepage": "https://aleksandra04.github.io/starwars-UI",
   "name": "star-wars",
   "version": "0.1.0",
   "private": true,
